--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "fs": "^0.0.1-security",
+    "idb": "^8.0.0",
+    "idb-keyval": "^6.2.1",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "react": "^18",
